Fri Jan 31 17:45:22 2003  Manish Singh  <yosh@gimp.org>

	* demos/pixbuf-demo.c
	* demos/testpixbuf.c
	* demos/gtk-demo/pixbufs.c: remove deprecated gtk_timeout_* usage.

Fri Jan 31 17:33:00 2003  Manish Singh  <yosh@gimp.org>
                                                                                
        * gtk/gtknotebook.c (gtk_notebook_remove_tab_label): set_state
        on the tab_label before unparenting it, in case the unparent
        drops the refcount to 0.

2003-02-01  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconfactory.h: Use GDK_MULTIHEAD_SAFE like all other gtk
	headers. Sorry about gtk_selection_clear, Yosh.

Thu Jan 30 17:16:05 2003  Manish Singh  <yosh@gimp.org>

	* gtk/gtkselection.h: declare gtk_selection_clear in GTK_COMPILATION
	too, for gtkwidget.c. Remember people, when introducing new
	deprecations, make sure internal code isn't using it, or if so,
	reorganize appropriately like I've done in other places.

	* tests/testtext.c: don't use deprecated gtk_timeout_* stuff.

2003-01-31  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkselection.h: 
	* gtk/gtkselection.c (gtk_selection_clear): Deprecate.  (#85683)

	* gdk/gdkpixbuf.h: 
	* gdk/gdkpixbuf-render.c (gdk_pixbuf_render_to_drawable): 
	(gdk_pixbuf_render_to_drawable_alpha): Deprecate.  (#60582)

	* gtk/gtkcolorsel.h:
	* gtk/gtkcolorsel.c (gtk_color_selection_set_change_palette_hook):
	Deprecate.  (#98167)

	* gtk/gtkpaned.h: Deprecate gtk_paned_computed_position(). (#97077)

	* gtk/gtkmain.h: Deprecate the gtk_timeout_*, gtk_idle_*
	and gtk_input_* functions.  (#71596)
	
	* gtk/gtkentry.c (gtk_entry_move_cursor): 
	* gtk/gtklabel.c (gtk_label_move_cursor): Handle
	GTK_MOVEMENT_HORIZONTAL_PAGES in switches.

	* gdk/gdk.h: Deprecate gdk_wcstombs() and gdk_mbstowcs().  (#79803)

	* gtk/gtkitemfactory.h: 
	* gtk/gtkitemfactory.c (gtk_item_factory_add_foreign): Deprecate. 
	(#69244)

Thu Jan 30 23:48:30 2003  Kristian Rietveld  <kris@gtk.org>
